# camera_models

./: .gitignore  CMakeLists.txt  CameraModelHelpers.hpp  CameraModels.hpp  CameraModelsConfig.cmake.in  CameraPyramid.hpp  FisheyeCameraModel.hpp  FullGenericCameraModel.hpp  IdealFisheyeCameraModel.hpp  IdealGenericCameraModel.hpp  OpenGLProjectionMatrix.hpp  PinholeCameraModel.hpp  PinholeDisparityBrownConrady.hpp  PinholeDisparityCameraModel.hpp  PinholeDisparityDistortedCameraModel.hpp  PinholeDistortedCameraModel.hpp  README.md  SphericalCameraModel.hpp  SphericalPovRayCameraModel.hpp
include/: CameraPyramid.hpp  IdealFisheyeCameraModel.hpp
include/CameraModels/: CameraModelUtils.hpp  CameraModels.hpp  CameraPyramid.hpp  Fisheye.hpp  FisheyeDistorted.hpp  Generic.hpp  GenericDistorted.hpp  PinholeDisparity.hpp  PinholeDisparityBrownConrady.hpp  PinholeDisparityDistorted.hpp  PinholeDistance.hpp  PinholeDistanceDistorted.hpp  RadialTangentialDistortion.hpp  Spherical.hpp  SphericalPovRay.hpp
sources/: CameraModels.cpp
tests/: CMakeLists.txt  CameraParameters.hpp  UT_CameraModels.cpp  UT_CameraPyramid.cpp  UT_Jacobians.cpp  UT_PolymorphicCameraModels.cpp  tests_main.cpp
